# kaylus-case-study

./: README.md
clip_this/: LICENSE  Makefile  pyproject.toml
clip_this/docs/: mkdocs.yml
clip_this/docs/docs/: index.md
clip_this/kcs/: __init__.py  dataset.py  features.py  plots.py
clip_this/kcs/modeling/: predict.py  train.py
clip_this/notebooks/eda/: pipeline_init.ipynb
clip_this/reports/: kaylus_case_study_insights.md
